[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scenes/Ajx2.tscn" type="PackedScene" id=1]
[ext_resource path="res://Textures/Set/Cross (2).png" type="Texture" id=2]
[ext_resource path="res://Textures/Set/Play (2).png" type="Texture" id=3]
[ext_resource path="res://Textures/Set/Cross (4).png" type="Texture" id=4]
[ext_resource path="res://Textures/Set/Cross (1).png" type="Texture" id=5]
[ext_resource path="res://Textures/Set/Play (4).png" type="Texture" id=6]
[ext_resource path="res://Textures/Set/Play (3).png" type="Texture" id=7]
[ext_resource path="res://Models/Bg/background.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/3environment.tres" type="Environment" id=9]
[ext_resource path="res://Scenes/Main.gd" type="Script" id=10]
[ext_resource path="res://Textures/Set/Quest (2).png" type="Texture" id=11]
[ext_resource path="res://Textures/Set/Quest (1).png" type="Texture" id=12]
[ext_resource path="res://Textures/Set/Quest (4).png" type="Texture" id=13]
[ext_resource path="res://Textures/Set/Restart (4).png" type="Texture" id=14]
[ext_resource path="res://Textures/Set/Restart (1).png" type="Texture" id=15]
[ext_resource path="res://Textures/Set/Restart (2).png" type="Texture" id=16]
[ext_resource path="res://Textures/128/Full (2).png" type="Texture" id=17]
[ext_resource path="res://Textures/128/Full (1).png" type="Texture" id=18]
[ext_resource path="res://Textures/128/Full (4).png" type="Texture" id=19]

[node name="Spatial" type="Spatial"]
script = ExtResource( 10 )

[node name="Ajx2" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.947824, 0, -0.318794, 0, 1, 0, 0.318794, 0, 0.947824, 0, 0, 0 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.989932, 0.141541, 0, -0.141541, 0.989932, -0.476716, 0.917942, 1.34897 )
near = 0.01

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_right = 128.0
margin_bottom = 135.0
rect_min_size = Vector2( 128, 135 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Exit" type="TextureButton" parent="CanvasLayer/MarginContainer/VBoxContainer/HBContainer"]
margin_right = 128.0
margin_bottom = 135.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_top = 139.0
margin_right = 1920.0
margin_bottom = 663.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_top = 667.0
margin_right = 1920.0
margin_bottom = 802.0

[node name="Fullscreen" type="TextureButton" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 128.0
margin_bottom = 135.0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 17 )

[node name="HBContainer2" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_top = 806.0
margin_right = 128.0
margin_bottom = 941.0
rect_min_size = Vector2( 128, 135 )
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 2

[node name="RandomAnim" type="TextureButton" parent="CanvasLayer/MarginContainer/VBoxContainer/HBContainer2"]
margin_right = 128.0
margin_bottom = 135.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="TextureButton" parent="CanvasLayer/MarginContainer/VBoxContainer/HBContainer2"]
visible = false
margin_left = 132.0
margin_right = 260.0
margin_bottom = 135.0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBContainer3" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_top = 945.0
margin_right = 128.0
margin_bottom = 1080.0
rect_min_size = Vector2( 128, 135 )
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 2

[node name="Play" type="TextureButton" parent="CanvasLayer/MarginContainer/VBoxContainer/HBContainer3"]
margin_right = 128.0
margin_bottom = 135.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.433013, -0.5, 0.75, 0.25, 0.866025, 0.433013, -0.866025, 0, 0.5, 2.35489, 0, 0 )
light_energy = 1.25
shadow_enabled = true
shadow_bias = 0.0

[node name="background" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 0.996869, 0.0790681, 0, -0.0790681, 0.996869, 0, -0.412895, -3.31409 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 9 )

[connection signal="button_down" from="CanvasLayer/MarginContainer/VBoxContainer/HBContainer/Exit" to="." method="_on_Exit_button_down"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="toggled" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/Fullscreen" to="." method="_on_Fullscreen_toggled"]
[connection signal="button_down" from="CanvasLayer/MarginContainer/VBoxContainer/HBContainer2/RandomAnim" to="." method="_on_RandomAnim_button_down"]
[connection signal="button_down" from="CanvasLayer/MarginContainer/VBoxContainer/HBContainer2/RandomAnim" to="Ajx2" method="_on_RandomAnim_button_down"]
[connection signal="button_down" from="CanvasLayer/MarginContainer/VBoxContainer/HBContainer2/Reset" to="Ajx2" method="_on_Reset_button_down"]
[connection signal="button_up" from="CanvasLayer/MarginContainer/VBoxContainer/HBContainer2/Reset" to="." method="_on_Reset_button_up"]
[connection signal="button_down" from="CanvasLayer/MarginContainer/VBoxContainer/HBContainer3/Play" to="." method="_on_Play_button_down"]
[connection signal="button_down" from="CanvasLayer/MarginContainer/VBoxContainer/HBContainer3/Play" to="Ajx2" method="_on_Play_button_down"]
